--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+collectd-sdiag-plugin (0.1-0sci8u2) scibian8; urgency=medium
+
+  * Fix arch from any to all
+
+ -- Rémi Palancher <remi-externe.palancher@edf.fr>  Fri, 07 Jun 2019 08:32:19 +0200
+
 collectd-sdiag-plugin (0.1-0sci8u1) scibian8; urgency=medium
 
   * Initial release
