--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+collectd-sdiag-plugin (1.0-0sci9u1) scibian9; urgency=medium
+
+  * New upstream version 1.0
+
+ -- Thomas HAMEL <thomas-t.hamel@edf.fr>  Fri, 13 Mar 2020 15:50:51 +0100
+
 collectd-sdiag-plugin (0.1-0sci9u2) scibian9; urgency=medium
 
   * Fix arch from any to all
