--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+collectd-sdiag-plugin (1.0-0sci10u2) scibian10; urgency=medium
+
+  * Rebuild for Slurm 21.08
+
+ -- Mathieu Chouquet-Stringer <mathieu-externe.chouquet-stringer@edf.fr>  Wed, 04 May 2022 17:22:40 +0200
+
 collectd-sdiag-plugin (1.0-0sci10u1) scibian10; urgency=medium
 
   * Build for 20.11
