--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+collectd-sdiag-plugin (2.0-0sci9u2) scibian9; urgency=medium
+
+  * Updated build dependencies 
+
+ -- Mathieu Chouquet-Stringer <mathieu-externe.chouquet-stringer@edf.fr>  Fri, 29 Sep 2023 12:00:17 +0200
+
 collectd-sdiag-plugin (2.0-0sci9u1) scibian9; urgency=medium
 
   * New upstream version 2.0
